[tool.poetry]
name = "fcc-arithmetic-formatter"
version = "0.1.0"
author = ["John Sprunger"]
project_url  = "https://www.freecodecamp.org/learn/scientific-computing-with-python/scientific-computing-with-python-projects/arithmetic-formatter"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"